RESOLVED FIXED65527
WebSocket should be closed by receiving unexpected continuation frame without any leading text or binary frames
https://bugs.webkit.org/show_bug.cgi?id=65527
Summary WebSocket should be closed by receiving unexpected continuation frame without...
Takashi Toyoshima
Reported 2011-08-02 05:09:00 PDT
In current implement, WebSocket just ignores invalid continuation frames which have no leading frame with FIN=0. cf.) Chromium side issue report: http://code.google.com/p/chromium/issues/detail?id=91193
Attachments
Patch (5.85 KB, patch)
2011-08-02 05:57 PDT, Takashi Toyoshima
no flags
Takashi Toyoshima
Comment 1 2011-08-02 05:57:37 PDT
Kent Tamura
Comment 2 2011-08-02 20:38:12 PDT
Comment on attachment 102641 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=102641&action=review Looks ok. > LayoutTests/ChangeLog:5 > + WebSocket: Should be closed by receiving invalid continuation frame. > + > + https://bugs.webkit.org/show_bug.cgi?id=65527 nit: We don't need a blank line between the summary line and the bug URL. > Source/WebCore/ChangeLog:5 > + WebSocket: Should be closed by receiving invalid continuation frame. > + > + https://bugs.webkit.org/show_bug.cgi?id=65527 ditto.
WebKit Review Bot
Comment 3 2011-08-02 21:38:04 PDT
Comment on attachment 102641 [details] Patch Clearing flags on attachment: 102641 Committed r92260: <http://trac.webkit.org/changeset/92260>
WebKit Review Bot
Comment 4 2011-08-02 21:38:09 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.