WebSocket: Should be closed by receiving invalid continuation frame.

https://bugs.webkit.org/show_bug.cgi?id=65527

Patch by Takashi Toyoshima <toyoshim@chromium.org> on 2011-08-02
Reviewed by Kent Tamura.

Source/WebCore:

Test: http/tests/websocket/tests/hybi/invalid-continuation.html

* websockets/WebSocketChannel.cpp:
(WebCore::WebSocketChannel::processFrame):

LayoutTests:

* http/tests/websocket/tests/hybi/invalid-continuation-expected.txt: Added.
* http/tests/websocket/tests/hybi/invalid-continuation.html: Added.
* http/tests/websocket/tests/hybi/invalid-continuation_wsh.py: Added.

Canonical link: https://commits.webkit.org/81400@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@92260 268f45cc-cd09-0410-ab3c-d52691b4dbfc